<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/board_grid"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_margin="10sp"
        android:layout_marginStart="410dp"
        android:layout_marginTop="730dp"
        android:layout_marginEnd="410dp"
        android:layout_marginBottom="730dp"
        android:background="@drawable/grid"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761"
        app:rowCount="3">

        <ImageView
            android:id="@+id/counter1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="11dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter1"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/counter2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="11dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter2"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/counter3"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="11dp"
            android:layout_marginStart="11dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter3"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/counter4"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="11dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter4"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/counter5"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter5"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/counter6"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="11dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter6"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/counter7"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="-7dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter7"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/counter8"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="-7dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter8"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/counter9"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="-7dp"
            android:alpha="0"
            android:clickable="true"
            android:contentDescription="@string/counter9"
            android:focusable="true"
            android:onClick="fadein"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2"
            tools:ignore="UsingOnClickInXml" />

    </androidx.gridlayout.widget.GridLayout>

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/confetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:alpha="0"
        android:fontFamily="@font/almendra_bold"
        android:text="here"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/almendra_bold"
        android:text="Play Again"
        android:textSize="18sp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />
</androidx.constraintlayout.widget.ConstraintLayout>